--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -170,129 +170,9 @@
        "      <td>1.7</td>\n",
        "      <td>1.7</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1101053</td>\n",
-       "      <td>종로구</td>\n",
-       "      <td>사직동</td>\n",
-       "      <td>1</td>\n",
-       "      <td>45</td>\n",
-       "      <td>352</td>\n",
-       "      <td>72</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>320</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>346</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>1.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1101053</td>\n",
-       "      <td>종로구</td>\n",
-       "      <td>사직동</td>\n",
-       "      <td>1</td>\n",
-       "      <td>50</td>\n",
-       "      <td>323</td>\n",
-       "      <td>49</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>306</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>319</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>1.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>1101053</td>\n",
-       "      <td>종로구</td>\n",
-       "      <td>사직동</td>\n",
-       "      <td>1</td>\n",
-       "      <td>55</td>\n",
-       "      <td>350</td>\n",
-       "      <td>56</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>345</td>\n",
-       "      <td>4.4</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>347</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>1.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>1101053</td>\n",
-       "      <td>종로구</td>\n",
-       "      <td>사직동</td>\n",
-       "      <td>1</td>\n",
-       "      <td>60</td>\n",
-       "      <td>245</td>\n",
-       "      <td>41</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>240</td>\n",
-       "      <td>2.7</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>244</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>1.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>1101053</td>\n",
-       "      <td>종로구</td>\n",
-       "      <td>사직동</td>\n",
-       "      <td>1</td>\n",
-       "      <td>65</td>\n",
-       "      <td>180</td>\n",
-       "      <td>30</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.6</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>179</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>1.7</td>\n",
-       "      <td>180</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10 rows × 143 columns</p>\n",
+       "<p>5 rows × 143 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -302,11 +182,6 @@
        "2  1101053  종로구  사직동   1   30   351    107                  0            2.2   \n",
        "3  1101053  종로구  사직동   1   35   353    105                  0            2.0   \n",
        "4  1101053  종로구  사직동   1   40   419     79                  0            1.9   \n",
-       "5  1101053  종로구  사직동   1   45   352     72                  0            1.8   \n",
-       "6  1101053  종로구  사직동   1   50   323     49                  0            1.8   \n",
-       "7  1101053  종로구  사직동   1   55   350     56                  0            1.7   \n",
-       "8  1101053  종로구  사직동   1   60   245     41                  0            1.7   \n",
-       "9  1101053  종로구  사직동   1   65   180     30                  0            1.6   \n",
        "\n",
        "   야간상주지 변경횟수: 4분위수, 25%  ...  배달_브랜드 서비스 사용 미추정 인구수  배달_브랜드 서비스 사용일수  \\\n",
        "0                      2  ...                    210              2.5   \n",
@@ -314,11 +189,6 @@
        "2                      1  ...                    302              3.2   \n",
        "3                      1  ...                    291              3.3   \n",
        "4                      1  ...                    380              3.1   \n",
-       "5                      1  ...                    320              3.0   \n",
-       "6                      1  ...                    306              3.0   \n",
-       "7                      1  ...                    345              4.4   \n",
-       "8                      1  ...                    240              2.7   \n",
-       "9                      1  ...                    179              1.7   \n",
        "\n",
        "   배달_브랜드 서비스 사용일수: 4분위수, 25%  배달_브랜드 서비스 사용일수: 4분위수, 50%  \\\n",
        "0                         1.7                         1.7   \n",
@@ -326,11 +196,6 @@
        "2                         1.7                         3.3   \n",
        "3                         1.7                         3.3   \n",
        "4                         1.7                         3.3   \n",
-       "5                         1.7                         1.7   \n",
-       "6                         1.7                         3.3   \n",
-       "7                         3.3                         5.0   \n",
-       "8                         1.7                         1.7   \n",
-       "9                         1.7                         1.7   \n",
        "\n",
        "   배달_브랜드 서비스 사용일수: 4분위수, 75%  배달_식재료 서비스 사용 미추정 인구수  배달_식재료 서비스 사용일수  \\\n",
        "0                         1.7                    214              1.7   \n",
@@ -338,11 +203,6 @@
        "2                         5.0                    347              1.7   \n",
        "3                         5.0                    344              1.7   \n",
        "4                         5.0                    410              1.7   \n",
-       "5                         5.0                    346              1.7   \n",
-       "6                         3.3                    319              1.7   \n",
-       "7                         5.0                    347              1.7   \n",
-       "8                         3.3                    244              1.7   \n",
-       "9                         1.7                    180              0.0   \n",
        "\n",
        "   배달_식재료 서비스 사용일수: 4분위수, 25%  배달_식재료 서비스 사용일수: 4분위수, 50%  \\\n",
        "0                         1.7                         1.7   \n",
@@ -350,11 +210,6 @@
        "2                         1.7                         1.7   \n",
        "3                         1.7                         1.7   \n",
        "4                         1.7                         1.7   \n",
-       "5                         1.7                         1.7   \n",
-       "6                         1.7                         1.7   \n",
-       "7                         1.7                         1.7   \n",
-       "8                         1.7                         1.7   \n",
-       "9                         0.0                         0.0   \n",
        "\n",
        "   배달_식재료 서비스 사용일수: 4분위수, 75%  \n",
        "0                         1.7  \n",
@@ -362,16 +217,11 @@
        "2                         1.7  \n",
        "3                         1.7  \n",
        "4                         1.7  \n",
-       "5                         1.7  \n",
-       "6                         1.7  \n",
-       "7                         1.7  \n",
-       "8                         1.7  \n",
-       "9                         0.0  \n",
        "\n",
-       "[10 rows x 143 columns]"
+       "[5 rows x 143 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +230,169 @@
     "import pandas as pd\n",
     "\n",
     "data = pd.read_csv(\"data/2022.1월_29개 통신정보.CSV\", encoding = \"euc-kr\")\n",
-    "data.head(10)"
+    "data.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "행정동코드\n",
+      "자치구\n",
+      "행정동\n",
+      "성별\n",
+      "연령대\n",
+      "총인구수\n",
+      "1인가구수\n",
+      "야간상주지 변경 미추정 인구 수\n",
+      "야간상주지 변경횟수 평균\n",
+      "야간상주지 변경횟수: 4분위수, 25%\n",
+      "야간상주지 변경횟수: 4분위수, 50%\n",
+      "야간상주지 변경횟수: 4분위수, 75%\n",
+      "주간상주지 변경 미추정 인구수\n",
+      "주간상주지 변경횟수 평균\n",
+      "주간상주지 변경횟수: 4분위수, 25%\n",
+      "주간상주지 변경횟수: 4분위수, 50%\n",
+      "주간상주지 변경횟수: 4분위수, 75%\n",
+      "출근 소요시간 미추정 인구수\n",
+      "평균 출근 소요시간 평균\n",
+      "평균 출근 소요시간: 4분위수, 25%\n",
+      "평균 출근 소요시간: 4분위수, 50%\n",
+      "평균 출근 소요시간: 4분위수, 75%\n",
+      "근무시간 미추정 인구수\n",
+      "평균 근무시간 평균\n",
+      "평균 근무시간: 4분위수, 25%\n",
+      "평균 근무시간: 4분위수, 50%\n",
+      "평균 근무시간: 4분위수, 75%\n",
+      "소액결재 비사용 인구수\n",
+      "소액결재 사용횟수 평균\n",
+      "소액결재 사용횟수: 4분위수, 25%\n",
+      "소액결재 사용횟수: 4분위수, 50%\n",
+      "소액결재 사용횟수: 4분위수, 75%\n",
+      "소액결재 사용 금액 없는 인구수\n",
+      "소액결재 사용금액 평균\n",
+      "소액결재 사용금액: 4분위수, 25%\n",
+      "소액결재 사용금액: 4분위수, 50%\n",
+      "소액결재 사용금액: 4분위수, 75%\n",
+      "최근 3개월 내 요금 연체 비율\n",
+      "카카오톡 비사용 인구수\n",
+      "SNS 사용횟수\n",
+      "SNS 사용횟수: 4분위수, 25%\n",
+      "SNS 사용횟수: 4분위수, 50%\n",
+      "SNS 사용횟수: 4분위수, 75%\n",
+      "평균 통화량\n",
+      "평균 통화량: 4분위수, 25%\n",
+      "평균 통화량: 4분위수, 50%\n",
+      "평균 통화량: 4분위수, 75%\n",
+      "평균 문자량\n",
+      "평균 문자량: 4분위수, 25%\n",
+      "평균 문자량: 4분위수, 50%\n",
+      "평균 문자량: 4분위수, 75%\n",
+      "평균 통화대상자 수\n",
+      "평균 통화대상자 수: 4분위수, 25%\n",
+      "평균 통화대상자 수: 4분위수, 50%\n",
+      "평균 통화대상자 수: 4분위수, 75%\n",
+      "평균 문자대상자 수\n",
+      "평균 문자대상자 수: 4분위수, 25%\n",
+      "평균 문자대상자 수: 4분위수, 50%\n",
+      "평균 문자대상자 수: 4분위수, 75%\n",
+      "데이터 사용량\n",
+      "데이터 사용량: 4분위수, 25%\n",
+      "데이터 사용량: 4분위수, 50%\n",
+      "데이터 사용량: 4분위수, 75%\n",
+      "평일 총 이동 횟수 미추정 인구수\n",
+      "평일 총 이동 횟수\n",
+      "평일 총 이동 횟수: 4분위수, 25%\n",
+      "평일 총 이동 횟수: 4분위수, 50%\n",
+      "평일 총 이동 횟수: 4분위수, 75%\n",
+      "휴일 이동 미추정 인구수\n",
+      "휴일 총 이동 횟수 평균\n",
+      "휴일 총 이동 횟수: 4분위수, 25%\n",
+      "휴일 총 이동 횟수: 4분위수, 50%\n",
+      "휴일 총 이동 횟수: 4분위수, 75%\n",
+      "집 추정 위치 평일 총 체류시간 미추정 인구수\n",
+      "집 추정 위치 평일 총 체류시간\n",
+      "집 추정 위치 평일 총 체류시간: 4분위수, 25%\n",
+      "집 추정 위치 평일 총 체류시간: 4분위수, 50%\n",
+      "집 추정 위치 평일 총 체류시간: 4분위수, 75%\n",
+      "집 추정 위치 휴일 총 체류시간 미추정 인구수\n",
+      "집 추정 위치 휴일 총 체류시간\n",
+      "집 추정 위치 휴일 총 체류시간: 4분위수, 25%\n",
+      "집 추정 위치 휴일 총 체류시간: 4분위수, 50%\n",
+      "집 추정 위치 휴일 총 체류시간: 4분위수, 75%\n",
+      "평일 총 이동 거리 미추정 인구수\n",
+      "평일 총 이동 거리 합계\n",
+      "평일 총 이동 거리 합계: 4분위수, 25%\n",
+      "평일 총 이동 거리 합계: 4분위수, 50%\n",
+      "평일 총 이동 거리 합계: 4분위수, 75%\n",
+      "휴일 총 이동 거리 미추정 인구수\n",
+      "휴일 총 이동 거리 합계\n",
+      "휴일 총 이동 거리 합계: 4분위수, 25%\n",
+      "휴일 총 이동 거리 합계: 4분위수, 50%\n",
+      "휴일 총 이동 거리 합계: 4분위수, 75%\n",
+      "지하철 이용 미추정 인구수\n",
+      "지하철이동일수 합계\n",
+      "지하철이동일수 합계: 4분위수, 25%\n",
+      "지하철이동일수 합계: 4분위수, 50%\n",
+      "지하철이동일수 합계: 4분위수, 75%\n",
+      "게임 서비스 사용 미추정 인구수\n",
+      "게임 서비스 사용일수\n",
+      "게임 서비스 사용일수: 4분위수, 25%\n",
+      "게임 서비스 사용일수: 4분위수, 50%\n",
+      "게임 서비스 사용일수: 4분위수, 75%\n",
+      "금융 서비스 사용 미추정 인구수\n",
+      "금융 서비스 사용일수\n",
+      "금융 서비스 사용일수: 4분위수, 25%\n",
+      "금융 서비스 사용일수: 4분위수, 50%\n",
+      "금융 서비스 사용일수: 4분위수, 75%\n",
+      "쇼핑 서비스 사용 미추정 인구수\n",
+      "쇼핑 서비스 사용일수\n",
+      "쇼핑 서비스 사용일수: 4분위수, 25%\n",
+      "쇼핑 서비스 사용일수: 4분위수, 50%\n",
+      "쇼핑 서비스 사용일수: 4분위수, 75%\n",
+      "동영상/방송 서비스 사용 미추정 인구수\n",
+      "동영상/방송 서비스 사용일수\n",
+      "동영상/방송 서비스 사용일수: 4분위수, 25%\n",
+      "동영상/방송 서비스 사용일수: 4분위수, 50%\n",
+      "동영상/방송 서비스 사용일수: 4분위수, 75%\n",
+      "유튜브 사용 미추정 인구수\n",
+      "유튜브 사용일수\n",
+      "유튜브 사용일수: 4분위수, 25%\n",
+      "유튜브 사용일수: 4분위수, 50%\n",
+      "유튜브 사용일수: 4분위수, 75%\n",
+      "넷플릭스 사용 미추정 인구수\n",
+      "넷플릭스 사용일수\n",
+      "넷플릭스 사용일수: 4분위수, 25%\n",
+      "넷플릭스 사용일수: 4분위수, 50%\n",
+      "넷플릭스 사용일수: 4분위수, 75%\n",
+      "배달 서비스 사용 미추정 인구수\n",
+      "배달 서비스 사용일수\n",
+      "배달 서비스 사용일수: 4분위수, 25%\n",
+      "배달 서비스 사용일수: 4분위수, 50%\n",
+      "배달 서비스 사용일수: 4분위수, 75%\n",
+      "배달_브랜드 서비스 사용 미추정 인구수\n",
+      "배달_브랜드 서비스 사용일수\n",
+      "배달_브랜드 서비스 사용일수: 4분위수, 25%\n",
+      "배달_브랜드 서비스 사용일수: 4분위수, 50%\n",
+      "배달_브랜드 서비스 사용일수: 4분위수, 75%\n",
+      "배달_식재료 서비스 사용 미추정 인구수\n",
+      "배달_식재료 서비스 사용일수\n",
+      "배달_식재료 서비스 사용일수: 4분위수, 25%\n",
+      "배달_식재료 서비스 사용일수: 4분위수, 50%\n",
+      "배달_식재료 서비스 사용일수: 4분위수, 75%\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = data.columns\n",
+    "\n",
+    "for i in range(len(a)):\n",
+    "    print(a[i])"
    ]
   },
   {
